--- a/post-installation/add/add-components/add-postgres-standby.yml
+++ b/post-installation/add/add-components/add-postgres-standby.yml
@@ -36,14 +36,17 @@
         cwc_properties:
           - { key: 'conf_pg_hba_replication.connection', value: '{{ replication_string }}', file_name: 'postgresql' }
 
-    - name: Restart pgmaster
+    - name: Stop pgmaster
       import_role:
-        name: "{{ item }}"
+        name: apigee-opdk-stop-components
       vars:
         component_name: "apigee-postgresql"
-      with_items:
-        - apigee-opdk-stop-components
-        - apigee-opdk-start-components
+
+    - name: Start pgmaster
+      import_role:
+        name: apigee-opdk-start-components
+      vars:
+        component_name: "apigee-postgresql"
 
 
 - name: Configure & Install Postgres
