Added offline download of yum packages

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -1,6 +1,6 @@
 ---
 - name: Download packages for manual installation
-  hosts: localhost
+  hosts: "{{ target_hosts }}"
   connection: local
   gather_facts: no
   vars_files:
