Added offline download of yum packages

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -13,6 +13,7 @@
     - { role: apigee-opdk-modules }
   tasks:
     - name: Download yum packages
+      become: true
       shell: "yum reinstall --downloadonly --downloaddir={{ local_apigee_path }} {{ archive_extra_packages | join(' ') }}"
 
 - name: Upload downloaded packages to planet
