Added offline download of yum packages

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -5,10 +5,10 @@
   tags: ['download']
   vars_files:
     - offline-download-packages.yml
-  vars:
-    property_folders:
-      - "~/.apigee-secure"
-      - "~/.apigee"
+#  vars:
+#    property_folders:
+#      - "~/.apigee-secure"
+#      - "~/.apigee"
   roles:
     - { role: apigee-opdk-modules }
   tasks:
