Added offline download of yum packages

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -44,6 +44,7 @@
     - { role: apigee-opdk-modules }
   tasks:
     - name: Ensure target folder exists
+      become: true
       file:
         path: "{{ apigee_home | default('/opt/apigee') }}/data/apigee-mirror/repos/thirdparty/7"
         state: directory
