Added offline download of yum packages

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -57,6 +57,7 @@
         pattern: '*.rpm'
         file_type: file
       register: package_names
+      delegate_to: localhost
 
     - name: Upload yum packages
       become: true
