Added offline download of yum packages

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -56,6 +56,7 @@
         path: "{{ local_apigee_path | default('~/.apigee') }}"
         pattern: '*.rpm'
         file_type: file
+        recurse: yes
       register: package_names
       delegate_to: 127.0.0.1
 
