Updated local_apigee_path reference

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -54,7 +54,7 @@
 
     - name: Create list of actual rpm file names
       find:
-        path: "{{ local_apigee_path | default('~/.apigee') }}"
+        path: "{{ local_apigee_path }}"
         pattern: '*.rpm'
         file_type: file
         recurse: yes
