--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -5,7 +5,7 @@
   tags: ['download']
   vars:
     package_folder: "/tmp/edge"
-    local_apigee_path: "{{ local_apigee_path | default('~/.apigee') }}"
+    local_apigee_path: "{{ temp_local_apigee_path | default('~/.apigee') }}"
     property_folders:
       - "~/.apigee"
   roles:
