Updated local_apigee_path reference

--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -39,7 +39,9 @@
   gather_facts: no
   tags: ['upload']
   vars:
-    property_folders:
+    package_folder: "/tmp/edge"
+    local_apigee_path: "{{ temp_local_apigee_path | default('~/.apigee') }}"
+        property_folders:
       - "~/.apigee"
   roles:
     - { role: apigee-opdk-modules }
