--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -20,6 +20,10 @@
       become: true
       shell: "yum reinstall --downloadonly --downloaddir={{ package_folder }} {{ archive_extra_packages | join(' ') }}"
 
+    - name: Download yumdownloader packages
+      become: true
+      shell: "yumdownloader --dest={{ package_folder }} {{ archive_extra_packages | join(' ') }}"
+
     - name: Create list of actual RPM
       find:
         path: "{{ package_folder }}"
