--- a/infrastructure/download-offline-packages/offline-download.yml
+++ b/infrastructure/download-offline-packages/offline-download.yml
@@ -16,13 +16,13 @@
         path: "{{ package_folder }}"
         state: directory
 
-    - name: Download yum packages
-      become: true
-      shell: "yum reinstall --downloadonly --downloaddir={{ package_folder }} {{ archive_extra_packages | join(' ') }}"
+#    - name: Download yum packages
+#      become: true
+#      shell: "yum reinstall --downloadonly --downloaddir={{ package_folder }} {{ archive_extra_packages | join(' ') }}"
 
     - name: Download yumdownloader packages
       become: true
-      shell: "yumdownloader --dest={{ package_folder }} {{ archive_extra_packages | join(' ') }}"
+      shell: "yumdownloader --dest={{ package_folder }} --resolve {{ archive_extra_packages | join(' ') }}"
 
     - name: Create list of actual RPM
       find:
