--- a/post-installation/backup/requirements.yml
+++ b/post-installation/backup/requirements.yml
@@ -1,5 +1,15 @@
 ---
-- src: https://github.com/carlosfrias/apigee-opdk-setup-default-settings
+- src: https://github.com/carlosfrias/apigee-opdk-settings-ldap.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-management-server.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-postgres.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-private-address.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-cassandra.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-settings-region.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-backup.git
 
