--- a/post-installation/backup/requirements.yml
+++ b/post-installation/backup/requirements.yml
@@ -18,3 +18,5 @@
 - src: https://github.com/carlosfrias/apigee-opdk-modules
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-apigee-user.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-setup-apigee-user-ownership.git
