--- a/post-installation/backup/requirements.yml
+++ b/post-installation/backup/requirements.yml
@@ -20,3 +20,5 @@
 - src: https://github.com/carlosfrias/apigee-opdk-setup-apigee-user.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-apigee-user-ownership.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-setup-java-homegit
