--- a/post-installation/backup/requirements.yml
+++ b/post-installation/backup/requirements.yml
@@ -21,4 +21,4 @@
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-apigee-user-ownership.git
 
-- src: https://github.com/carlosfrias/apigee-opdk-setup-java-homegit
+- src: https://github.com/carlosfrias/apigee-opdk-setup-java-home.git
