--- a/post-installation/backup/requirements.yml
+++ b/post-installation/backup/requirements.yml
@@ -22,3 +22,5 @@
 - src: https://github.com/carlosfrias/apigee-opdk-setup-apigee-user-ownership.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-java-home.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap.git
