--- a/post-installation/backup/requirements.yml
+++ b/post-installation/backup/requirements.yml
@@ -24,3 +24,5 @@
 - src: https://github.com/carlosfrias/apigee-opdk-setup-java-home.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-setup-bootstrap-archive-installer.git
