--- a/post-installation/backup/backup.yml
+++ b/post-installation/backup/backup.yml
@@ -16,6 +16,7 @@
     - { role: apigee-opdk-settings-postgres }
     - { role: apigee-opdk-setup-apigee-user }
     - { role: apigee-opdk-setup-apigee-user-ownership }
+    - { role: apigee-opdk-setup-openjdk, tags['openjdk'] }
     - { role: apigee-opdk-setup-java-home }
     - { role: apigee-opdk-setup-bootstrap }
 
