--- a/installations/aio/install.yml
+++ b/installations/aio/install.yml
@@ -10,7 +10,7 @@
     - "~/.apigee"
 
   roles:
-  - { role: apigee-opdk-modules, tags: ['cache'] }
+  - { role: apigee-opdk-modules, tags: ['cache', 'license'] }
   - { role: apigee-opdk-setup-os-epel, tags: ['epel', 'os'] }
   - { role: apigee-opdk-shutdown-iptables, tags: ['minimum', 'iptables', 'os'] }
   - { role: apigee-opdk-yum-repository-proxy-config, tags: ['yum-proxy-config', 'os']}
@@ -25,7 +25,7 @@
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user', 'bootstrap'] }
   - { role: apigee-opdk-setup-java-home, tags: ['java-home', 'bootstrap'] }
   - { role: apigee-opdk-setup-bootstrap, tags: ['apigee-bootstrap', 'bootstrap'] }
-  - { role: apigee-opdk-setup-license, tags: ['license', 'bootstrap'] }
+  - { role: apigee-opdk-setup-license, tags: ['license', 'bootstrap', 'common'] }
   - { role: apigee-opdk-setup-component-install, component: 'apigee-setup', tags: ['setup', 'common'] }
   - { role: apigee-opdk-setup-component-install, component: 'apigee-adminapi', tags: ['adminapi', 'common'] }
   - { role: apigee-opdk-setup-apigee-user-ownership, tags: ['apigee-user','common'] }
