Updated folder name for semantic congruence

--- a/post-installation/restart-planet/requirements.yml
+++ b/post-installation/restart-planet/requirements.yml
@@ -5,3 +5,5 @@
 - src: https://github.com/carlosfrias/apigee-opdk-start-components.git
 
 - src: https://github.com/carlosfrias/apigee-opdk-stop-components.git
+
+- src: https://github.com/carlosfrias/apigee-opdk-restart.git
