Updated folder name for semantic congruence

--- a/post-installation/restart-planet/restart-apigee-servers.yml
+++ b/post-installation/restart-planet/restart-apigee-servers.yml
@@ -11,4 +11,5 @@
   roles:
     - { role: apigee-opdk-modules }
     - { role: apigee-opdk-restart }
+    - { role: apigee-opdk-start-components }
 
