Updated folder name for semantic congruence

--- a/post-installation/restart-planet/restart-apigee-servers.yml
+++ b/post-installation/restart-planet/restart-apigee-servers.yml
@@ -10,6 +10,7 @@
       - "~/.apigee"
   roles:
     - { role: apigee-opdk-modules }
+    - { role: apigee-opdk-stop-components }
     - { role: apigee-opdk-restart }
     - { role: apigee-opdk-start-components }
 
