updated disk size

--- a/infrastructure/gce-management/gce-properties.yml
+++ b/infrastructure/gce-management/gce-properties.yml
@@ -1,6 +1,6 @@
 ---
 credentials_file: ~/.apigee-secure/edge-ops-lab-e7a48eec6f40.json
-disk_size: 50G
+disk_size: 50
 machine_type: 'n1-standard-2'
 external_projects: 'eip-images'
 image: 'centos-7'
